// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ButtonSubmit default 1`] = `
<div
  style={
    Object {
      "background": "#F7F7F7",
      "height": "60px",
      "padding": "15px 15px 0 15px",
    }
  }
>
  <button
    className="button-submit"
  />
</div>
`;

exports[`Storyshots Message Received Message 1`] = `
<div
  style={
    Object {
      "background": "#F7F7F7",
      "height": "60px",
      "padding": "15px 15px 0 15px",
    }
  }
>
  <div
    className="message received"
  >
    <p>
      Default Message
    </p>
    <span>
      12:41
    </span>
  </div>
</div>
`;

exports[`Storyshots Message Received Message: big text 1`] = `
<div
  style={
    Object {
      "background": "#F7F7F7",
      "height": "auto",
      "padding": "15px 15px 15px 15px",
    }
  }
>
  <div
    className="message received"
  >
    <p>
      Lorem ipsum dolor sit amet,
                    consectetur adipiscing elit. Cras maximus iaculis mauris,
                    eget porttitor nisi interdum sit amet. Phasellus eu rhoncus nisl.
                    Etiam porta, mi a congue lobortis,
    </p>
    <span>
      12:41
    </span>
  </div>
</div>
`;

exports[`Storyshots Message Sent Message 1`] = `
<div
  style={
    Object {
      "background": "#F7F7F7",
      "height": "60px",
      "padding": "15px 15px 0 15px",
    }
  }
>
  <div
    className="message sent"
  >
    <p>
      Default Message
    </p>
    <span>
      12:41
    </span>
  </div>
</div>
`;

exports[`Storyshots Message Sent Message: big text 1`] = `
<div
  style={
    Object {
      "background": "#F7F7F7",
      "height": "auto",
      "padding": "15px 15px 15px 15px",
    }
  }
>
  <div
    className="message sent"
  >
    <p>
      Lorem ipsum dolor sit amet,
                    consectetur adipiscing elit. Cras maximus iaculis mauris,
                    eget porttitor nisi interdum sit amet. Phasellus eu rhoncus nisl.
                    Etiam porta, mi a congue lobortis,
    </p>
    <span>
      12:41
    </span>
  </div>
</div>
`;

exports[`Storyshots Message default 1`] = `
<div
  style={
    Object {
      "background": "#F7F7F7",
      "height": "60px",
      "padding": "15px 15px 0 15px",
    }
  }
>
  <div
    className="message undefined"
  >
    <p>
      Default Message
    </p>
    <span>
      12:41
    </span>
  </div>
</div>
`;

exports[`Storyshots MessageField default 1`] = `
<div
  style={
    Object {
      "background": "#F7F7F7",
      "height": "60px",
      "padding": "15px 15px 0 15px",
    }
  }
>
  <div
    className="message-field"
  >
    <input
      placeholder="Type a message"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots MessageForm default 1`] = `
<div
  style={
    Object {
      "background": "#F7F7F7",
      "height": "60px",
      "padding": "15px 15px 0 15px",
    }
  }
>
  <div
    className="message-form"
  >
    <div
      className="message-field"
    >
      <input
        placeholder="Type a message"
        type="text"
      />
    </div>
    <button
      className="button-submit"
    />
  </div>
</div>
`;

exports[`Storyshots MessageList default 1`] = `
<div
  style={
    Object {
      "background": "#F7F7F7",
      "height": "auto",
      "padding": "15px 15px 15px 15px",
    }
  }
>
  <div
    className="message-list"
  >
    <div
      className="message sent"
    >
      <p>
        Default Message
      </p>
      <span>
        12:41
      </span>
    </div>
    <div
      className="message received"
    >
      <p>
        Lorem ipsum dolor sit amet,
                    consectetur adipiscing elit. Cras maximus iaculis mauris,
                    eget porttitor nisi interdum sit amet. Phasellus eu rhoncus nisl.
                    Etiam porta, mi a congue lobortis,
      </p>
      <span>
        12:41
      </span>
    </div>
    <div
      className="message received"
    >
      <p>
        Default Message
      </p>
      <span>
        12:41
      </span>
    </div>
    <div
      className="message sent"
    >
      <p>
        Lorem ipsum dolor sit amet,
                    consectetur adipiscing elit. Cras maximus iaculis mauris,
                    eget porttitor nisi interdum sit amet. Phasellus eu rhoncus nisl.
                    Etiam porta, mi a congue lobortis,
      </p>
      <span>
        12:41
      </span>
    </div>
    <div
      className="message sent"
    >
      <p>
        Default Message
      </p>
      <span>
        12:41
      </span>
    </div>
    <div
      className="message received"
    >
      <p>
        Lorem ipsum dolor sit amet,
                    consectetur adipiscing elit. Cras maximus iaculis mauris,
                    eget porttitor nisi interdum sit amet. Phasellus eu rhoncus nisl.
                    Etiam porta, mi a congue lobortis,
      </p>
      <span>
        12:41
      </span>
    </div>
  </div>
</div>
`;
